--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.0",
     "autoprefixer": "^10.4.8",
+    "flowbite": "^1.5.1",
     "pinia": "^2.0.17",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.7",
     "vite": "^3.0.0",
+    "vite-plugin-favicon": "^1.0.8",
     "vue-router": "^4.1.3"
   }
 }
